--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Brand</title>
-    <meta name="description" content="MemeApi é uma Lib para facilitar o usuario a encontrar os memes que ele tanto deseja na linguagem que ele quiser que demais não?">
-    <meta property="og:description" content="Com o intuito de ajudar as pessoas apresentamos a meme API">
+    <meta property="og:description" content="Com o intuito de ajudar os desenvolvedores na internet a procurarem memes criamos a MemeAPI.">
+    <meta name="description" content="Com o intuito de ajudar os desenvolvedores na internet a procurarem memes criamos a MemeAPI.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/memeapi.png">
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:image" content="assets/img/memeapi.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </section>
-        <section id="devs" class="clean-block about-us" style="background-color:#343a40;">
+        <section id="devs" class="clean-block about-us" style="background-color: #343a40;width: 570px;">
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info" style="color:rgb(184,194,194);">Desenvolvedores</h2>
