--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </section>
-        <section id="devs" class="clean-block about-us" style="background-color: #343a40;width: 570px;">
+        <section id="devs" class="clean-block about-us" style="background-color: #343a40;">
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info" style="color:rgb(184,194,194);">Desenvolvedores</h2>
